# scidb

./: .gitignore  CMakeLists.txt  cleanmyria.sh  clearlogs.sh  install.cmake  license.py.txt  license.txt  rebuild.sh  reinitscidb.sh  restartall.sh  restartmyria.sh  restartscidb.sh  run.py  scidb.spec.in
examples/: CMakeLists.txt
examples/bestmatch/: BestMatchArray.cpp  BestMatchArray.h  CMakeLists.txt  LogicalBestMatch.cpp  PhysicalBestMatch.cpp
examples/complex/: CMakeLists.txt  complex.cpp
examples/example_udos/: CMakeLists.txt  README  plugin.cpp  standalone_makefile
examples/fits/: CMakeLists.txt  plugin.cpp
examples/loadpipe/: README.txt  make_nyse_arrays.sh  nyse_feeder.py  nyse_loader.sh  nyse_tool.py  track_favorites.py
examples/match/: CMakeLists.txt  LogicalMatch.cpp  MatchArray.cpp  MatchArray.h  PhysicalMatch.cpp  plugin.cpp
examples/misc/: CMakeLists.txt  misc.ail  misc.cpp  misc_functions.h
examples/more_math/: CMakeLists.txt  more_math.cpp
examples/operators/: CMakeLists.txt  LogicalStub.cpp  PhysicalStub.cpp  plugin.cpp
examples/point/: CMakeLists.txt  functions.h  point.cpp
examples/ra_decl/: CMakeLists.txt  ra_decl.cpp
examples/rational/: CMakeLists.txt  rational.ail  rational.cpp  rational_functions.h
examples/savebmp/: CMakeLists.txt  LogicalSaveBmp.cpp  PhysicalSaveBmp.cpp  plugin.cpp
examples/tile_integration/: CMakeLists.txt  LogicalTileApply.cpp  PhysicalTileApply.cpp  TileApplyArray.cpp  TileApplyArray.h  plugin.cpp
src/: CMakeLists.txt
src/array/: Array.cpp  CMakeLists.txt  ComplementArray.cpp  Coordinate.cpp  DBArray.cpp  DeepChunkMerger.cpp  DeepChunkMerger.h  DelegateArray.cpp  FileArray.cpp  LogicalTestCache.cpp  MemArray.cpp  MemChunk.cpp  MergeSortArray.cpp  Metadata.cpp  ParallelAccumulatorArray.cpp  PhysicalTestCache.cpp  RLE.cpp  SortArray.cpp  SpatialRangesChunkPosIterator.cpp  StreamArray.cpp  Tile.cpp  TransientCache.cpp  TupleArray.cpp  UnitTestChunkLimitLogical.cpp  UnitTestChunkLimitPhysical.cpp  UnitTestDeepChunkMergeLogical.cpp  UnitTestDeepChunkMergePhysical.cpp  UnitTestMemArrayLogical.cpp  UnitTestMemArrayPhysical.cpp  UnitTestSortArrayLogical.cpp  UnitTestSortArrayPhysical.cpp
src/capi/: CMakeLists.txt  SciDBRemote.cpp  export.map  scidbapi.py.in  scidbpython.i
src/dense_linear_algebra/: CMakeLists.txt  DLAErrors.h  diag.sh  doSvd.sh  doSvdDirect.sh  doSvdDirectCluster.sh  doSvdMetric.sh  doSvdWithMetrics.sh  plugin.cpp  pluginNoSP.cpp
src/jdbc/: CMakeLists.txt  build.xml  logging.properties
src/linear_algebra/: CMakeLists.txt  LAErrors.h  plugin.cpp
src/mpi/: CMakeLists.txt  MPIInitLogical.cpp  MPIInitPhysical.cpp  MPILauncher.cpp  MPIManager.cpp  MPIPhysical.cpp  MPISlaveProxy.cpp  MPIUtils.cpp  build_scalapack_mpich2.sh  pluginNoMpi.cpp
src/network/: BaseConnection.cpp  BaseConnection.h  CMakeLists.txt  ClientMessageHandleJob.cpp  ClientMessageHandleJob.h  Connection.cpp  Connection.h  MessageHandleJob.cpp  MessageHandleJob.h  MessageUtils.cpp  MessageUtils.h  NetworkManager.cpp  NetworkManager.h  ThrottledScheduler.h  entry.cpp
src/query/: Aggregate.cpp  AggregateUnitTests.h  AuxUnitTests.h  BuiltInFunctions.h  BuiltInFunctions.inc  BuiltinAggregates.cpp  CMakeLists.txt  Expression.cpp  ExpressionUnitTests.h  FunctionDescription.cpp  FunctionLibrary.cpp  FunctionLibraryUnitTests.h  LogicalExpression.cpp  Operator.cpp  OperatorLibrary.cpp  OperatorProfiling.cpp  Parser.h  PullSGArray.cpp  PullSGArray.h  PullSGContext.cpp  PullSGContext.h  Query.cpp  QueryPlan.cpp  QueryPlan.h  QueryPlanUtilites.cpp  QueryProcessor.cpp  QueryProcessor.h  RemoteArray.cpp  RemoteArray.h  SGChunkReceiver.cpp  Serialize.cpp  Serialize.h  Statistics.cpp  TileFunctions.cpp  TypeLibraryUnitTests.h  TypeSystem.cpp  UDT.cpp
src/smgr/: CMakeLists.txt
src/system/: BlockCyclic.cpp  CMakeLists.txt  Cluster.cpp  Config.cpp  Constants.cpp.in  ErrorsLibrary.cpp  ExceptionUnitTests.h  Exceptions.cpp  Resources.cpp  SciDBConfigOptions.cpp  SciDBConfigOptions.h  Sysinfo.cpp  System.cpp  System.h.in  Warnings.cpp
src/util/: BufferedFileInput.cpp  BufferedFileInput.h  CMakeLists.txt  CoordinatesMapper.cpp  Counter.cpp  CsvParser.cpp  DataStore.cpp  FileIO.cpp  InjectedError.cpp  Job.cpp  JobQueue.cpp  MultiConstIterators.cpp  PluginManager.cpp  PluginManager.h  PluginObjects.cpp  Semaphore.cpp  SpatialType.cpp  Thread.cpp  ThreadPool.cpp  TsvParser.cpp  UnitTestDataStoreLogical.cpp  UnitTestDataStorePhysical.cpp  UnitTestFileIOLogical.cpp  UnitTestFileIOPhysical.cpp  WorkQueue.cpp  isnumber.cpp  log4cxx.properties  na.cpp  naInternal.cpp  require.cpp  require.h  scidb-sample.conf.in  tsvparse.cpp
tests/harness/: CMakeLists.txt  check_ops.py  log4j.properties  mconfig.ini  merge_reports.py  mu_admin.py  perf_repart.sh  python_verifier.py  python_verifier_unittest.py  report_generator_timer_repart.py  runN.py  scidbtestharness_env.sh  scidbtestprep.py  test_generator.py  test_generator_perf_repart.py  test_generator_repart.py  test_generator_unittest.py
tests/unit/: ArenaUnitTests.h  CMakeLists.txt  PointerRangeUnitTests.h  unit_tests.cpp
utils/: CMakeLists.txt  benchGen.cc  calculate_chunk_length.py  check_or_replace_copyright.pl  chroot_build.py  config.ini.ec2  config.ini.planet  copyright.sh  csv2scidb.cpp  dumpstack.sh  dumpthreads.gdb  env_setup.sh  f77_check.sh  gen_csv.pl  init-db.sh  init-scidb.sh  install-Ubuntu-10_10.sh  loadcsv.py.in  loadpipe.py  log1.properties  make_packages.sh  make_repo.py  make_repo.sh  oprof.sh  prelude.txt.in  raw2load.pl  remove_arrays.py  sample_config.ini.in  scidb-prepare-db.sh.in  scidb.py.in  scidbLoadCsv.sh  scidbLoadCsvTest.sh  scidbSyscalls.stp  scidb_backup.py  scidb_cores  scidbconf.cpp  splitcsv.c  splitcsv.cpp  tsv2scidb.cpp  update_alternatives.sh
utils/iquery/: CMakeLists.txt  IqueryConfig.h  commands.h  iquery.cpp  iquery.sh  iquery_parser.cpp  iquery_parser.h  keywords.cpp  keywords.h  parser.yy  scanner.h  scanner.ll
utils/scidblib/: CMakeLists.txt  PSF_license.txt  __init__.py  counter.py  scidb_afl.py  scidb_math.py  scidb_progress.py  scidb_psf.py  util.py  (+2 more)
(+8027 files in other folders)
