########################################
# BEGIN_COPYRIGHT
#
# This file is part of SciDB.
# Copyright (C) 2008-2014 SciDB, Inc.
#
# SciDB is free software: you can redistribute it and/or modify
# it under the terms of the AFFERO GNU General Public License as published by
# the Free Software Foundation.
#
# SciDB is distributed "AS-IS" AND WITHOUT ANY WARRANTY OF ANY KIND,
# INCLUDING ANY IMPLIED WARRANTY OF MERCHANTABILITY,
# NON-INFRINGEMENT, OR FITNESS FOR A PARTICULAR PURPOSE. See
# the AFFERO GNU General Public License for the complete license terms.
#
# You should have received a copy of the AFFERO GNU General Public License
# along with SciDB.  If not, see <http://www.gnu.org/licenses/agpl-3.0.html>
#
# END_COPYRIGHT
########################################
add_subdirectory("point")
add_subdirectory("rational")
add_subdirectory("complex")
add_subdirectory("ra_decl")
add_subdirectory("more_math")
add_subdirectory("misc")
add_subdirectory("match")
add_subdirectory("bestmatch")
add_subdirectory("savebmp")
add_subdirectory("operators")
add_subdirectory("fits")
add_subdirectory("example_udos")
add_subdirectory("tile_integration")